Add Expense Form

--- a/src/_config/i18n/locales/ar/properties.json
+++ b/src/_config/i18n/locales/ar/properties.json
@@ -2,5 +2,6 @@
     "dashboard": "Dashboard",
     "home": "Home",
     "lists": "Lists",
-    "expense": "Expense"
+    "expense": "Expense",
+    "AddExpense": "Add Expense"
 }
