--- a/src/_config/i18n/locales/fr/properties.json
+++ b/src/_config/i18n/locales/fr/properties.json
@@ -4,6 +4,6 @@
     "lists": "Listes",
     "addlist": "Ajouter une liste",
     "expense": "Dépense",
-    "addtransaction": "Ajouter une dépense"
+    "AddExpense": "Ajouter une dépense"
   }
   
