--- a/src/_config/i18n/locales/en/properties.json
+++ b/src/_config/i18n/locales/en/properties.json
@@ -4,6 +4,6 @@
     "lists": "Lists",
     "addlist": "Add list",
     "expense": "Expense",
-    "addtransaction": "add expense"
+    "AddExpense": "add expense"
 }
   
