--- a/src/_config/i18n/locales/ar/properties.json
+++ b/src/_config/i18n/locales/ar/properties.json
@@ -3,5 +3,6 @@
     "home": "Home",
     "lists": "Lists",
     "expense": "Expense",
-    "AddExpense": "Add Expense"
+    "addexpense": "Add Expense",
+    "transactions": "Trans"
 }
