--- a/src/_config/i18n/locales/en/properties.json
+++ b/src/_config/i18n/locales/en/properties.json
@@ -4,6 +4,7 @@
     "lists": "Lists",
     "addlist": "Add list",
     "expense": "Expense",
-    "AddExpense": "add expense"
+    "addexpense": "add expense",
+    "transactions": "Trans"
 }
   
