--- a/src/_config/i18n/locales/fr/properties.json
+++ b/src/_config/i18n/locales/fr/properties.json
@@ -3,7 +3,9 @@
     "home": "Accueil",
     "lists": "Listes",
     "addlist": "Ajouter une liste",
+    "editlist": "Modifier la liste",
     "expense": "Dépense",
-    "AddExpense": "Ajouter une dépense"
+    "addexpense": "Ajouter une depense",
+    "transactions": "Trans"
   }
   
